# ai-ready-data

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  README.md  skills-lock.json  temp.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: beta-feedback.yml  requirement-proposal.yml
.github/workflows/: framework-structure-guardrails.yml  update-contributors.yml
demo/: DEMO.md  setup.sql
demos/: README.md  run.sh
demos/rag/: DEMO.md  teardown.sql
demos/scan-agents/: DEMO.md  setup.sql  teardown.sql
docs/: CONTRIBUTE.md  PLATFORM_CONTRIBUTOR_SPEC.md  support-matrix.json  support-matrix.md
docs/contracts/: execution-contract.md
docs/demo/: setup.sql
docs/workflows/: assessment.md  remediation.md
eval/: __init__.py  conftest.py  hooks.py  pyproject.toml  pytest_reporter.py  runner.py  scorer.py  trajectory.py
eval/assertions/: __init__.py  base.py  flow.py  report.py  sql.py  workload.py
eval/mocks/: mock_snowflake.py  mock_sql_tool.py
eval/scenarios/: clean_snowflake.py  degraded_rag.py  governance_gap.py
eval/tests/: test_ai_workload.py  test_conversation_flow.py  test_requirement_unit.py  test_sql_generation.py
eval/workloads/: base.py  rag_workload.py
factors/: 0-clean.md  1-contextual.md  2-consumable.md  3-current.md  4-correlated.md  5-compliant.md  definitions.md
scripts/: generate_support_matrix.py  migrate_platform_constraints.py  migrate_requirements_layout.py  sync_skill_mirrors.py  validate.py  validate_phase0.py  validate_requirements_contracts.py  validate_structure.py
skills/ai-ready-data/: SKILL.md
(+818 files in other folders)
